package(default_visibility = ["//visibility:public"])   
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

# Make the jasmine library available at runtime by exposing our node_modules
# directory.
filegroup(
    name = "node_modules",
    srcs = glob(["node_modules/**/*"]),
    visibility = ["//visibility:public"],
)


# This is like a "js_library", but there are no actions to run on JS files so a
# filegroup is semantically equivalent.
# filegroup(
#     name = "api",
#     srcs = ["index.js"],
# )

jasmine_node_test(
    name = "test",
    srcs = glob(["lib/*.test.js"]),
    node_modules = "//:node_modules",
    deps = [],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "api",
    data = [
        "index.js"
    ],
    entry_point = "api/index.js"
)